feat(log-tool.sh): 基本完成dockerfile的编写